[package]
name = "pride-cli"
version = "0.1.0"
edition = "2021"
authors = ["Wren"]
description = "A CLI tool that outputs various pride flags"
readme = "README.md"
homepage = "https://github.com/Wrenderbender/pride-cli"
repository = "https://github.com/Wrenderbender/pride-cli"
license = "GPL-3.0-only"
keywords = ["lgbt", "pride", "terminal"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
terminal_size = "0.3.0"
lazy_static = "1.4.0"